# secure-embedded-gui-platform

./: .gitignore  README.md  main.py  pyproject.toml  requirements.py
.github/workflows/: python-app.yml
core/: application.py  config_manager.py  security_manager.py  window_manager.py
plugins/: plugin_interface.py  plugin_manager.py
plugins/built_in/hello_world/: plugin.py
themes/: theme_interface.py  theme_manager.py
themes/default/: dark_theme.py  light_theme.py
ui/: content_area.py  main_window.py  sidebar.py
ui/widgets/: enhanced_terminal.py  log_panel.py  map_widget.py  plugin_manager_widget.py  settings_panel.py  system_monitor.py  terminal.py  user_management.py
utils/: secure_shell.py
