[project]
name = "secure-gui-platform"
version = "0.1.0"
description = "Secure embedded GUI platform for FreeBSD and Linux"
authors = [
    {name = "neonforest860",email = "neonforest860@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
