[tool.poetry]
name = "secure-gui-platform"
version = "0.1.0"
description = "A secure, embedded GUI platform for FreeBSD and Linux"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.3.0"
PySide6 = "^6.3.0"
typing-extensions = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

